# roguelike

./: .gitignore  .travis.yml  CMakeLists.txt  src_list.cmake  update_cmake.sh
data/images/: cursor.xcf
data/scripts/: new_level.lua
doxystuff/: Doxyfile
src/: CMakeLists.txt  main.cc  src_list.cmake
src/game/: alg.h  base.h  component.h  config.h  config.h.in
src/game/action/: aim.cc  aim.h
src/game/action/skill/: generic.cc  generic.h  movement.cc  movement.h  movement_place.cc  movement_place.h  movement_step.cc  self.cc  self.h  self_damage.cc  self_lightvision.cc  self_turnninety.cc  self_turnninety.h  simple.cc  simple.h  simple_fireat.cc  simple_fireat.h  simple_idle.cc  simple_idle.h  simple_melee.cc  simple_melee.h  skill.cc  skill.h  skillmanager.cc  skillmanager.h
src/game/action/time/: timeelapsed.h  timemanager.cc  timemanager.h
src/game/alg/: equationallinedouble.cc  equationallinedouble.h  los.h
src/game/alg/los/: cone.cc  cone.h  evenoctantiterator.cc  eye.cc  eye.h  octant.h  octantprocessor.cc  octantprocessor.h  oddoctantiterator.cc  processor.cc  processor.h
src/game/base/: gamecontroller.cc  gamecontroller.h  gameobject.cc  gameobject.h  gamething.h  gametile.cc  gametile.h  levelmanager.cc  levelmanager.h
src/game/builder/: objectbuilder.cc
src/game/component/: aim.cc  aim.h  controller.cc  controller.h  controller_ai.cc  controller_ai.h  controller_idle.cc  controller_idle.h  controller_player.cc  controller_player.h  energy.h  graphic.cc  graphic.h  graphic_rectangular.cc  graphic_rectangular.h  shape.h  shape_rectangular.cc  shape_rectangular.h  sound.cc  sound.h  vision.cc  vision.h
src/game/ui/: cursor.cc  cursor.h
src/utils/: integer2Dutils.cc  integer2Dutils.h
